--- a/app/src/main/res/layout/item_giay.xml
+++ b/app/src/main/res/layout/item_giay.xml
@@ -5,7 +5,7 @@
     android:elevation="8dp"
     app:cardCornerRadius="4dp"
     android:layout_margin="5dp"
-    android:layout_height="wrap_content">
+    android:layout_height="150dp">
     <LinearLayout
         android:weightSum="10"
         android:layout_width="match_parent"
