--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,26 @@
                 android:layout_height="?attr/actionBarSize"
                 app:title="Trang Chính"
                 android:background="#ff00dfff">
+
+                <FrameLayout
+                    android:layout_gravity="right"
+                    android:id="@+id/framegiohang"
+                    android:layout_marginRight="10dp"
+                    android:layout_width="55dp"
+                    android:layout_height="?attr/actionBarSize">
+                    <com.nex3z.notificationbadge.NotificationBadge
+                        android:layout_width="28dp"
+                        android:id="@+id/menu_sl"
+                        android:layout_gravity="top|right"
+                        android:layout_height="28dp"/>
+                    <ImageView
+                        android:layout_marginTop="15dp"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:src="@drawable/ic_cart_24"/>
+
+                </FrameLayout>
+
             </androidx.appcompat.widget.Toolbar>
             <ViewFlipper
                 android:id="@+id/flipper"
