--- a/app/src/main/res/layout/item_giohang.xml
+++ b/app/src/main/res/layout/item_giohang.xml
@@ -48,7 +48,7 @@
                     android:src="@drawable/ic_baseline_remove_24"
                     android:id="@+id/item_giohang_tru"
                     android:layout_width="0dp"
-                    android:layout_weight="1"
+                    android:layout_weight="2"
                     android:layout_height="wrap_content"/>
                 <TextView
                     android:layout_width="0dp"
@@ -57,30 +57,28 @@
                     android:text="1"
                     android:gravity="center"
                     android:textSize="15sp"
-                    android:layout_weight="1"
+                    android:layout_weight="3"
                     android:textStyle="bold"/>
 
                 <ImageView
                     android:src="@drawable/ic_baseline_add_24"
-                    android:layout_weight="1"
+                    android:layout_weight="2"
                     android:id="@+id/item_giohang_cong"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"/>
-                <ImageView
-                    android:src="@drawable/ic_baseline_drag_handle_24"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="wrap_content"/>
-                <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/item_giohang_giasp2"
-                    android:text="10000đ"
-                    android:layout_weight="7"
-                    android:gravity="center"
-                    android:textSize="15sp"
-                    android:textColor="@android:color/holo_red_light"/>
+
+
             </LinearLayout>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:id="@+id/item_giohang_giasp2"
+                android:text="10000đ"
+                android:gravity="right"
+                android:textSize="17sp"
+                android:layout_gravity="bottom|right"
+                android:textColor="@android:color/holo_red_light"/>
         </LinearLayout>
     </LinearLayout>
 
