--- a/app/src/main/res/layout/activity_dang_ki.xml
+++ b/app/src/main/res/layout/activity_dang_ki.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.DangKiActivity">
+    tools:context=".activity.DangKiActivity"
+    android:background="@drawable/gradient">
 
     <TextView
         android:id="@+id/txtdangnhap"
