--- a/app/src/main/res/layout/activity_nam.xml
+++ b/app/src/main/res/layout/activity_nam.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.NamActivity">
+    tools:context=".activity.NamActivity"
+    android:background="@drawable/gradient">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
