--- a/app/src/main/res/layout/activity_thanh_toan.xml
+++ b/app/src/main/res/layout/activity_thanh_toan.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.ThanhToanActivity">
+    tools:context=".activity.ThanhToanActivity"
+    android:background="@drawable/gradient">
     <androidx.appcompat.widget.Toolbar
         app:layout_constraintTop_toTopOf="parent"
         app:title="Thanh Toán"
