--- a/app/src/main/res/layout/activity_thong_tin.xml
+++ b/app/src/main/res/layout/activity_thong_tin.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.ThongTinActivity">
+    tools:context=".activity.ThongTinActivity"
+    android:background="@drawable/gradient">
     <TextView
         android:text="@string/th_ng_tin"
         android:gravity="center"
