--- a/app/src/main/res/layout/item_giay.xml
+++ b/app/src/main/res/layout/item_giay.xml
@@ -5,7 +5,8 @@
     android:elevation="8dp"
     app:cardCornerRadius="4dp"
     android:layout_margin="5dp"
-    android:layout_height="150dp">
+    android:layout_height="150dp"
+    android:background="@drawable/gradient">
     <LinearLayout
         android:weightSum="10"
         android:layout_width="match_parent"
@@ -17,7 +18,7 @@
             android:src="@drawable/iconnew_h512"
             android:layout_width="0dp"
             android:layout_height="100dp"/>
-        
+
         <LinearLayout
             android:orientation="vertical"
             android:layout_weight="7"
