--- a/app/src/main/res/layout/item_giohang.xml
+++ b/app/src/main/res/layout/item_giohang.xml
@@ -5,7 +5,8 @@
     app:cardCornerRadius="4dp"
     android:elevation="8dp"
     android:layout_margin="5dp"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/gradient">
 
     <LinearLayout
         android:orientation="horizontal"
