--- a/app/src/main/res/layout/item_sanpham.xml
+++ b/app/src/main/res/layout/item_sanpham.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:orientation="horizontal"
     android:layout_marginTop="15dp"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/gradient">
     <ImageView
         android:layout_width="55dp"
         android:layout_height="55dp"
