--- a/app/src/main/res/layout/item_spmoi.xml
+++ b/app/src/main/res/layout/item_spmoi.xml
@@ -7,7 +7,8 @@
     android:layout_marginRight="10dp"
     app:cardCornerRadius="4dp"
     android:layout_width="160dp"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/gradient">
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
