--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="start_color">#12c2e9</color>
+    <color name="center_color">#c471ed</color>
+    <color name="end_color">#f64f59</color>
 </resources>
