--- a/app/src/main/res/layout/activity_dang_nhap.xml
+++ b/app/src/main/res/layout/activity_dang_nhap.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.DangNhapActivity"
-    android:background="@drawable/gradient">
+    tools:context=".activity.DangNhapActivity">
 
     <TextView
         android:id="@+id/txtdangnhap"
@@ -54,17 +53,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </com.google.android.material.textfield.TextInputLayout>
-
+    
     <androidx.appcompat.widget.AppCompatButton
         app:layout_constraintTop_toBottomOf="@+id/line2"
         android:layout_marginLeft="25dp"
         android:id="@+id/btndangnhap"
         android:layout_marginRight="25dp"
         android:layout_marginTop="10dp"
-        android:background="@drawable/gradient"
+        android:background="@drawable/background_button"
         android:text="@string/ng_nh_p"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"/>
     <LinearLayout
         app:layout_constraintTop_toBottomOf="@+id/btndangnhap"
         android:layout_marginTop="10dp"
