--- a/app/src/main/res/drawable/gradient.xml
+++ b/app/src/main/res/drawable/gradient.xml
@@ -4,4 +4,5 @@
         android:centerColor="@color/center_color"
         android:endColor="@color/end_color"
         android:angle="45"/>
+<!--    nghia-->
 </shape>
