--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -73,6 +73,7 @@
         <com.google.android.material.navigation.NavigationView
             android:id="@+id/navigationview"
             android:layout_gravity="start"
+            android:background="@drawable/gradient"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <ListView
