--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,8 @@
                 app:title="Trang Chính"
                 android:background="#ff00dfff">
 
+
+
                 <FrameLayout
                     android:layout_gravity="right"
                     android:id="@+id/framegiohang"
@@ -33,12 +35,26 @@
                         android:id="@+id/menu_sl"
                         android:layout_gravity="top|right"
                         android:layout_height="28dp"/>
+
                     <ImageView
                         android:layout_marginTop="15dp"
                         android:layout_width="35dp"
                         android:layout_height="35dp"
                         android:src="@drawable/ic_cart_24"/>
 
+                </FrameLayout>
+
+                <FrameLayout
+                    android:id="@+id/search"
+                    android:nextFocusRight="@id/framegiohang"
+                    android:layout_gravity="right"
+                    android:layout_width="55dp"
+                    android:layout_height="?attr/actionBarSize">
+                    <ImageView
+                        android:layout_marginTop="10dp"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:src="@drawable/ic_search_24"/>
                 </FrameLayout>
 
             </androidx.appcompat.widget.Toolbar>
