--- a/app/src/main/res/layout/activity_lien_he.xml
+++ b/app/src/main/res/layout/activity_lien_he.xml
@@ -28,7 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <ImageView
-                android:src="@drawable/logo"
+                android:src="@drawable/logo1"
                 android:layout_width="100dp"
                 android:layout_height="50dp"/>
             <TextView
