--- a/app/src/main/res/layout/activity_dang_nhap.xml
+++ b/app/src/main/res/layout/activity_dang_nhap.xml
@@ -12,9 +12,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+        <ImageView
+            android:id="@+id/logomain"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:gravity="center"
+            android:layout_marginLeft="150dp"
+            android:layout_marginTop="10dp"
+            android:paddingBottom="10dp"
+            android:src="@drawable/logo1"/>
         <TextView
             android:id="@+id/txtdangnhap"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/logomain"
             android:text="@string/ng_nh_p"
             android:textSize="25sp"
             android:textColor="@color/teal_200"
