--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,10 +18,13 @@
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                app:title="Trang Chính"
-                android:background="#ff00dfff">
-
+                android:layout_height="60dp"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                app:logo="@drawable/ic_logo"
+                app:title="Trang chính"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                app:layout_constraintTop_toTopOf="parent"
+                app:titleMarginStart="0dp" >
 
 
                 <FrameLayout
@@ -44,18 +47,7 @@
 
                 </FrameLayout>
 
-                <FrameLayout
-                    android:id="@+id/search"
-                    android:nextFocusRight="@id/framegiohang"
-                    android:layout_gravity="right"
-                    android:layout_width="55dp"
-                    android:layout_height="?attr/actionBarSize">
-                    <ImageView
-                        android:layout_marginTop="10dp"
-                        android:layout_width="35dp"
-                        android:layout_height="35dp"
-                        android:src="@drawable/ic_search_24"/>
-                </FrameLayout>
+
 
             </androidx.appcompat.widget.Toolbar>
             <ViewFlipper
@@ -85,17 +77,20 @@
                     android:layout_height="match_parent"
                     android:background="@drawable/gradient"/>
             </LinearLayout>
-        </LinearLayout>
-        <com.google.android.material.navigation.NavigationView
-            android:id="@+id/navigationview"
-            android:layout_gravity="start"
-            android:background="@drawable/gradient"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
             <ListView
                 android:id="@+id/listview"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
+        </LinearLayout>
+        <com.google.android.material.navigation.NavigationView
+            android:id="@+id/navigationview"
+            android:layout_gravity="start"
+            app:headerLayout="@layout/header"
+            android:background="@drawable/gradient"
+            app:menu="@menu/navigation_menu"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
         </com.google.android.material.navigation.NavigationView>
     </androidx.drawerlayout.widget.DrawerLayout>
 
